# Configurer

./: CMakeLists.txt  consts.h  main.cpp  project.cpp  project.h  projects.rar  solution.cpp  solution.h  split.h
